# NeuroSim-Engine

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
core/: brain_router.cpp  brain_router.hpp  flashback_overlay.cpp  flashback_overlay.hpp  memory_overlay.cpp  memory_overlay.hpp  multimodal_fusion.cpp  multimodal_fusion.hpp  simulator.cpp  simulator.hpp
data/embeddings/: sample_embeddings.json
data/region_maps/: brain_region_mappings.json
data/token_streams/: sample_interactions.json
inputs/: audio_to_embedding.cpp  audio_to_embedding.hpp  image_to_embedding.cpp  image_to_embedding.hpp  interoceptive_sim.cpp  interoceptive_sim.hpp  vestibular_synth.cpp  vestibular_synth.hpp
pybind/: loader.py  neuro_api_bindings.cpp
regions/: amygdala.cpp  amygdala.hpp  cerebellum.cpp  cerebellum.hpp  hippocampus.cpp  hippocampus.hpp  insula.cpp  insula.hpp  microcircuit.cpp  microcircuit.hpp  prefrontal.cpp  prefrontal.hpp
test/: simple_test.cpp  test_basic_simulation.cpp  test_python_integration.py
